<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.list.ListFragment">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/itemRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:scrollbars="vertical" />

        <!--        <ListView-->
        <!--            android:id="@+id/coinList"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content" />-->

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:contentDescription="@string/submit"
            android:src="@android:drawable/ic_input_add" />

    </FrameLayout>
</layout>